--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
-<script src='https://cdn.jsdelivr.net/npm/@widgetbot/crate@3' async defer>
-    new Crate({
-        server: '1154156052359688244', // MULE ORGANIZATION
-        channel: '1154156053127237644' // #general
-    })
-</script>
+<html>
+<widgetbot
+    server="1154156052359688244"
+    channel="1154156053127237644"
+    width="800"
+    height="600"
+></widgetbot>
+<script src="https://cdn.jsdelivr.net/npm/@widgetbot/html-embed"></script>
 </html>
