--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <h1> Welcome to MULE! </h1>
-    <a href="./Discord.html">Discord</a>
+    <a href="./discord.html">Discord</a>
 <script src='https://cdn.jsdelivr.net/npm/@widgetbot/crate@3' async defer>
     new Crate({
         server: '1154156052359688244', // MULE ORGANIZATION
