--- a/discord.html
+++ b/discord.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<a href="./index.html">Back</a>
+<h1> <a href="./index.html">Back</a> </h1>
 <widgetbot
     server="1154156052359688244"
     channel="1154156053127237644"
