--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+    <name> Dashboard </name>
     <h1> Welcome to MULE! </h1>
     <a href="./discord.html">Discord</a>
 <script src='https://cdn.jsdelivr.net/npm/@widgetbot/crate@3' async defer>
