--- a/discord.html
+++ b/discord.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-     <name> Dashboard </name>
+     <title> Dashboard </title>
 <h1> <a href="./index.html">Back</a> </h1>
 <widgetbot
     server="1154156052359688244"
