--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <title> Dashboard </title>
+    <link rel="icon" type="image/x-icon" href="canvas.ico">
     <h1> Welcome to MULE! </h1>
     <a href="./discord.html">Discord</a>
 <script src='https://cdn.jsdelivr.net/npm/@widgetbot/crate@3' async defer>
