--- a/discord.html
+++ b/discord.html
@@ -5,8 +5,8 @@
 <widgetbot
     server="1154156052359688244"
     channel="1154156053127237644"
-    width="1800"
-    height="900"
+    width="99%"
+    height="87%%"
 ></widgetbot>
 <script src="https://cdn.jsdelivr.net/npm/@widgetbot/html-embed"></script>
 </html>
