--- a/discord.html
+++ b/discord.html
@@ -7,6 +7,7 @@
     channel="1154156053127237644"
     width="99%"
     height="87%%"
+style="position: fixed; width: 100%; height: 100%"
 ></widgetbot>
 <script src="https://cdn.jsdelivr.net/npm/@widgetbot/html-embed"></script>
 </html>
