--- a/discord.html
+++ b/discord.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+     <body>
      <title> Dashboard </title>
 <h1> <a href="./index.html">Back</a> </h1>
 <widgetbot
@@ -9,5 +10,6 @@
     height="87%%"
 style="position: fixed; width: 100%; height: 100%"
 ></widgetbot>
-<script src="https://cdn.jsdelivr.net/npm/@widgetbot/html-embed"></script>
+     <script src="https://cdn.jsdelivr.net/npm/@widgetbot/html-embed"></script>
+          </body>
 </html>
