--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+    <body>
     <title> Dashboard </title>
     <link rel="icon" type="image/x-icon" href="canvas.ico">
     <h1> Welcome to MULE! </h1>
@@ -10,4 +11,5 @@
         channel: '1154156053127237644' // #general
     })
 </script>
+    </body>
 </html>
