--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+    <head>
     <body>
     <h1> Welcome to MULE! </h1>
     <a href="./discord.html">Discord</a>
@@ -10,4 +11,5 @@
     })
 </script>
     </body>
+        </head>
 </html>
