--- a/discord.html
+++ b/discord.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+     <head>
      <body>
 <h1> <a href="./index.html">Back</a> </h1>
 <widgetbot
@@ -10,4 +11,5 @@
 ></widgetbot>
      <script src="https://cdn.jsdelivr.net/npm/@widgetbot/html-embed"></script>
           </body>
+          </head>
 </html>
