--- a/discord.html
+++ b/discord.html
@@ -2,12 +2,12 @@
 <html>
      <head>
      <body>
-<h1> <a href="./index.html">Back</a> </h1>
+<h1> <a href="./index.html">Back</a> <a href="./custom.html">Back</a> </h1> 
 <widgetbot
     server="1154156052359688244"
     channel="1154156053127237644"
     width="99%"
-    height="87%%"
+    height="87%"
 ></widgetbot>
      <script src="https://cdn.jsdelivr.net/npm/@widgetbot/html-embed"></script>
           </body>
