--- a/custom.html
+++ b/custom.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <body>
-       <a href="./canvas.js">Canvas</a>
+       <a href="./canvas.html">Canvas</a>
     </body>
   </head>
 </html>
