--- a/discord.html
+++ b/discord.html
@@ -2,7 +2,7 @@
 <html>
      <head>
      <body>
-<h1> <a href="./index.html">Back</a> <a href="./custom.html">Back</a> </h1> 
+<h1> <a href="./index.html">Back</a> </h1> 
 <widgetbot
     server="1154156052359688244"
     channel="1154156053127237644"
