--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
     <body>
     <h1> Welcome to MULE! </h1>
-    <a href="./discord.html">Discord</a>
+   <h3> <a href="./discord.html">Discord</a>  <a href="./custom.html">Back</a> </h3>
 <script src='https://cdn.jsdelivr.net/npm/@widgetbot/crate@3' async defer>
     new Crate({
         server: '1154156052359688244', // MULE ORGANIZATION
