--- a/custom.html
+++ b/custom.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <body>
-       <a href="./canvas.html">Canvas</a>
-    </body>
-  </head>
+        <a href="./index.html">Back</a>
+  <a href="./canvas.html">Canvas</a>
+  <a href="./ozark.html">Ozark Site</a>
+  <a href="./kahn.html">Kahn Acadamy</a>
 </html>
