--- a/canvas.html
+++ b/canvas.html
@@ -3,7 +3,7 @@
   <head>
     <body>
       <title> Dashboard </title>
-       <link rel="icon" type="image/x-icon" href="/images/canvas.ico">
+       <link rel="shortcut icon" type="image/jpg" href="canvas.ico"/>
     </body>
   </head>
 </html>
