--- a/canvas.html
+++ b/canvas.html
@@ -3,7 +3,7 @@
   <head>
     <body>
       <title> Dashboard </title>
-       <link href="canvas.ico"/>
+       <link rel="shortcut icon" href="canvas.ico" />
     </body>
   </head>
 </html>
