--- a/custom.html
+++ b/custom.html
@@ -1,7 +1,5 @@
 <!DOCTYPE html>
 <html>
         <a href="./index.html">Back</a>
-  <a href="./canvas.html">Canvas</a>
-  <a href="./ozark.html">Ozark Site</a>
-  <a href="./kahn.html">Kahn Acadamy</a>
+  <a onclick="jsfunction()" href="./canvas.html">
 </html>
