--- a/canvas.html
+++ b/canvas.html
@@ -3,7 +3,7 @@
   <head>
     <body>
       <title> Dashboard </title>
-       <link rel="shortcut icon" href="./canvas.ico" />
+       <a onclick="jsfunction()" href="#">
     </body>
   </head>
 </html>
