--- a/custom.html
+++ b/custom.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
 <html>
         <a href="./index.html">Back</a>
+        <link rel="icon" type="image/x-icon" href="/images/canvas.ico">
 </html>
