--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+       <link rel="icon" type="image/x-icon" href="canvas.ico">
     <h1> Welcome to MULE! </h1>
    <h3> <a href="./discord.html">Discord</a>  <a href="./custom.html">Tab Icons</a> </h3>
 <script src='https://cdn.jsdelivr.net/npm/@widgetbot/crate@3' async defer>
