--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
        <link rel="icon" type="image/x-icon" href="canvas.ico">
     <h1> Welcome to MULE! </h1>
-   <h3> <a href="./discord.html">Discord</a>  <a href="./custom.html">Tab Icons</a> </h3>
+   <h3> <a href="./discord.html">Discord</a> <a href="./games.html">Games</a> <a href="./custom.html">Tab Icons</a> </h3>
 <script src='https://cdn.jsdelivr.net/npm/@widgetbot/crate@3' async defer>
     new Crate({
         server: '1154156052359688244', // MULE ORGANIZATION
