--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+       <title> Dashboard </title>
        <link rel="icon" type="image/x-icon" href="canvas.ico">
     <h1> Welcome to MULE! </h1>
    <h3> <a href="./discord.html">Discord</a> <a href="./games.html">Games</a> <a href="./custom.html">Tab Icons</a> </h3>
