--- a/games.html
+++ b/games.html
@@ -1,4 +1,6 @@
 <!DOCTYPE html>
 <html>
+   <title> Dashboard </title>
+       <link rel="icon" type="image/x-icon" href="canvas.ico">
   <a href="./google-baseball.html">Google Baseball</a>
 </html>
