--- a/google-baseball.html
+++ b/google-baseball.html
@@ -1,4 +1,6 @@
 <!DOCTYPE html>
 <html>
+  <title> Dashboard </title>
+       <link rel="icon" type="image/x-icon" href="canvas.ico">
 <iframe title="Include gadget (iframe)" width="960" height="640"scrolling="no" frameborder="0" id="518929564" name="518929564" allowtransparency="true" class="igm" src="https://www.google.com/logos/2019/july4th19/r3/july4th19.html"></iframe>
 </html>
