--- a/games.html
+++ b/games.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
    <title> Dashboard </title>
+   <h1> <a href="./index.html">Back</a> </h1>
        <link rel="icon" type="image/x-icon" href="canvas.ico">
   <a href="./google-baseball.html">Google Baseball</a>
 </html>
