--- a/index.html
+++ b/index.html
@@ -1,13 +1,5 @@
 <!DOCTYPE html>
 <html>
-       <title> Dashboard </title>
-       <link rel="icon" type="image/x-icon" href="canvas.ico">
-    <h1> Welcome to MULE! </h1>
-   <h3> <a href="./discord.html">Discord</a> <a href="./games.html">Games</a> </h3>
-<script src='https://cdn.jsdelivr.net/npm/@widgetbot/crate@3' async defer>
-    new Crate({
-        server: '1154156052359688244', // MULE ORGANIZATION
-        channel: '1154156053127237644' // #general
-    })
-</script>
+       <title> This repo is no longer in use as I have changed it do to to many people knowing about this site sorry
+</title>
 </html>
