--- a/discord.html
+++ b/discord.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
      <title> Dashboard </title>
-       <link rel="icon" type="image/x-icon" href="canvas.ico">
+       <link rel="icon" type="image/x-icon" href="./canvas.ico">
 <h1> <a href="./index.html">Back</a> </h1> 
 <widgetbot
     server="1154156052359688244"
