--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
        <title> Dashboard </title>
-       <link rel="icon" type="image/x-icon" href="canvas.ico">
+       <link rel="icon" type="image/x-icon" href="./canvas.ico">
     <h1> Welcome to MULE! </h1>
    <h3> <a href="./discord.html">Discord</a> <a href="./games.html">Games</a> </h3>
 <script src='https://cdn.jsdelivr.net/npm/@widgetbot/crate@3' async defer>
